# fl-studio-mcp

./: .gitignore  LICENSE  README.md  install.py  pyproject.toml
src/: __init__.py  main.py
src/bridge/: __init__.py  ipc_handler.py  midi_bridge.py
src/fl_scripts/: MCP_PianoRoll.pyscript  device_FLStudioMCP.py
src/tools/: __init__.py  channel_tools.py  diagnostic_tools.py  mixer_tools.py  pianoroll_tools.py  transport_tools.py
tests/: test_bridge.py  test_fl_scripts.py  test_install.py
