[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-studio-mcp"
version = "0.1.0"
description = "MCP server that lets Claude inspect, control, compose, and mix inside Image-Line FL Studio"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "sorkthropic" }]
requires-python = ">=3.10"
keywords = ["mcp", "fl-studio", "midi", "daw", "claude", "music"]
dependencies = [
    "mcp[cli]>=1.2.0",       # official MCP SDK — includes FastMCP
    "mido>=1.3.0",           # MIDI message building / port handling
    "python-rtmidi>=1.5.0",  # backend mido uses to talk to real/virtual MIDI ports
    "pydantic>=2.0",         # input validation models
    "filelock>=3.13",        # cross-platform file locking for the IPC queue
]

[project.scripts]
fl-studio-mcp = "src.main:main"

[project.urls]
Homepage = "https://github.com/alansork/fl-studio-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src"]
